a few more tweaks to poster

--- a/doc/Poster_XAFS15/XDI_Poster.tex
+++ b/doc/Poster_XAFS15/XDI_Poster.tex
@@ -107,7 +107,17 @@
 
       \begin{block}{\large XDI: Current Status}
 
-        STATUS REPORT
+        We currently have, ready for testing:
+        \begin{center}
+          \begin{minipage}{0.9\linewidth}
+            \begin{description}[A]
+            \item {\Blue{12 example XDI files}} 12 different spectra, all valid  XDI Files.
+            \item {\Blue{C library and Shared Object Library (DLL)}}  for
+              reading an XDI spectra:  Source code, Windows, Mac OSX binaries.
+            \item {\Blue{Python Library}}  Built using C library.
+            \end{description}
+            \end{minipage}
+            \end{center}
 
       \end{block}
       \end{column}
@@ -252,11 +262,12 @@
 
      An XDI file contains exactly one $\mu(E)$ or $\chi(k)$ XAFS
      spectrum.  To support libraries of spectra or multi-spectral data
-     sets, we propose some possible solutions for multiple spectra.
+     sets, we propose some possible solutions to complement XDI for multiple spectra.
+     These suggestions should not be viewed as exclusive.
 
    \end{block}
 
-   \vspace{-13mm}
+  \vspace{-1mm}
 
     \begin{columns}[t]
       \begin{column}{.01\linewidth}
