--- a/doc/Poster_XAFS15/beamerthemeXDI.sty
+++ b/doc/Poster_XAFS15/beamerthemeXDI.sty
@@ -28,8 +28,9 @@
 \usecolortheme{whale}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\definecolor{blockbg}{rgb}{0.96, 0.96, 0.92}
+\definecolor{blockbg}{rgb}{0.97, 0.97, 0.94}
 \definecolor{posterbg}{rgb}{0.94, 0.93, 0.90}
+\definecolor{posterbg}{rgb}{0.92, 0.91, 0.85}
 
 \setbeamercolor{headline}{fg=black, bg=tabutter}
 \setbeamerfont{footline}{size=\large,series=\tt}
@@ -116,7 +117,7 @@
   \end{beamercolorbox}
 
   \leavevmode%
-  \begin{beamercolorbox}[ht=5ex,leftskip=1em,rightskip=1em]{author in head/foot}%
+  \begin{beamercolorbox}[ht=4ex,leftskip=1em,rightskip=1em]{author in head/foot}%
     \vskip1ex
     \texttt{http://github.com/XraySpectroscopy}
     \hfill
