--- a/doc/Poster_XAFS15/XDI_Poster.tex
+++ b/doc/Poster_XAFS15/XDI_Poster.tex
@@ -370,7 +370,7 @@
         \begin{block}{SQLite -- relational database in a file}
 
           \justifying A true relational database in a portable file. Supports
-          SQL and many languagess.  An industry standard for
+          SQL and many languages.  An industry standard for
           data storage. Like ASCII, not high performance for numerical
           arrays.
 
