first final version -- sent to printer

--- a/doc/Poster_XAFS15/XDI_Poster.tex
+++ b/doc/Poster_XAFS15/XDI_Poster.tex
@@ -28,9 +28,9 @@
 \author[Newville, Sol\'e, Ravel, and Hester]{
   Matthew Newville${}^{a}$, V. Armando  Sol\'e${}^{b}$,  James R. Hester${}^{c}$, and Bruce Ravel${}^{d}$}
 \institute[]{
-  ${}^{a}$Center for Advanced Radiation Sources, University of Chicago, USA, \par
-  ${}^{b}$European Synchrotron Radiation Facility, Grenoble, France, \par
-  ${}^{c}$Bragg Institute, Australian Nuclear Science and Technology Organization, Sydney, Australia, \par
+  ${}^{a}$Center for Advanced Radiation Sources, University of Chicago, USA\par
+  ${}^{b}$European Synchrotron Radiation Facility, Grenoble, France\par
+  ${}^{c}$Bragg Institute, Australian Nuclear Science and Technology Organization, Sydney, Australia\par
   ${}^{d}$National Institute  of Standards and Technology, Gaithersburg, MD USA
 }
 
@@ -303,10 +303,8 @@
           optimized data arrays.  HDF5 is becoming standard at synchrotrons
           for very large datasets.  Excellent library support.
 
-         \vspace{6mm}
-
          \begin{center}
-           \includegraphics[width=0.62\linewidth]{hdf5.png}
+           \includegraphics[width=0.48\linewidth]{hdf5.png}
          \end{center}
 
          \vspace{10mm} {\ }   \vspace{10mm} {\ }
