--- a/doc/Poster_XAFS15/beamerthemeXDI.sty
+++ b/doc/Poster_XAFS15/beamerthemeXDI.sty
@@ -96,7 +96,7 @@
         \raggedleft
         \usebeamercolor{title in headline}{\color{fg}\textbf{\LARGE{\inserttitle}}\\[1ex]}
         \usebeamercolor{author in headline}{\color{fg}\large{\insertauthor}\\[1ex]}
-        \usebeamercolor{institute in headline}{\color{fg}\large{\insertinstitute}\\[1ex]}
+        \usebeamercolor{institute in headline}{\color{fg}\normalsize{\insertinstitute}\\[1ex]}
       \end{column}
       \begin{column}{.07\paperwidth}
       \end{column}
@@ -117,7 +117,7 @@
   \end{beamercolorbox}
 
   \leavevmode%
-  \begin{beamercolorbox}[ht=4ex,leftskip=1em,rightskip=1em]{author in head/foot}%
+  \begin{beamercolorbox}[ht=3.5ex,leftskip=1em,rightskip=1em]{author in head/foot}%
     \vskip1ex
     \texttt{http://github.com/XraySpectroscopy}
     \hfill
